Fix footer background animation on firefox
- Change footer background animation not working
in firefox.
- Change jyronue bullet list color

--- a/src/App.css
+++ b/src/App.css
@@ -20,16 +20,22 @@
 }
 
 .footer {
-  background-image: url("./assets/images/bg_portfolio.svg"),
-    linear-gradient(
-      -5deg,
-      #6229a9,
-      var(--color-15),
-      var(--color-14),
-      var(--color-13),
-      #ddd6e8
-    );
-  background-size: cover, 100%;
+  padding: 0;
+  background-image: linear-gradient(
+    -5deg,
+    #6229a9,
+    var(--color-15),
+    var(--color-14),
+    var(--color-13),
+    #ddd6e8
+  );
+  background-size: 100%;
+  transition: all 1s ease-out;
+}
+
+.f-bg {
+  background-image: url("./assets/images/bg_portfolio.svg");
+  background-size: cover;
   transition: all 1s ease-out;
 }
 
